# Android-TLS-Proxy

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/nibiru/evil_ap/: ExampleInstrumentedTest.java  ModelTest.java  PresenterTest.java  ViewTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: arp-spoof.cpp  dns-sniff.cpp  dns-spoof.cpp  native-lib.cpp  scan-active.cpp  scanner.cpp
app/src/main/cpp/include/: ErrnoRestorer.h  bionic_macros.h  bionic_netlink.h  ifaddrs.h
app/src/main/cpp/include/tins/: config.h
app/src/main/res/anim/: move.xml
app/src/main/res/drawable/: back.xml  ic_laptop_white_24dp.xml  ic_refresh_24dp.xml  ic_settings_24dp.xml  roundedbutton.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  dialog_scanner_settings.xml  fragment_ac.xml  fragment_achttp.xml  fragment_achttps.xml  fragment_action_center.xml  fragment_ap_mode.xml  fragment_client.xml  fragment_client_list.xml  fragment_client_mode.xml  fragment_clients.xml  fragment_main.xml  fragment_network.xml  fragment_scanner.xml  fragment_server_details.xml  fragment_server_details_item.xml  fragment_serveritem.xml  fragment_serveritem_list.xml  list_item_clients.xml  nav_header.xml  rv_host_item_row.xml
app/src/main/res/menu/: drawer_view.xml  network.xml
app/src/main/res/raw/: evil_ap  index.html  not_found.html
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/android/util/: Log.java
(+157 files in other folders)
